syntax = "proto3";
package proto;
option go_package = "./proto";

import "config.proto";
import "generic.proto";

service AccountService {
    rpc Create(NewAccountRequest) returns (StatusResponse) {};
    rpc Details(Id) returns (AccountDetailsResponse) {};
    rpc Edit(EditAccountRequest) returns (StatusResponse) {};
    rpc Delete(Id) returns (StatusResponse) {};
    rpc SoftDelete(Id) returns (StatusResponse) {};
    rpc Restore(Id) returns (StatusResponse) {};
}

// NEW ACCOUNT
message NewAccountRequest {
    int64 IdNationality  = 1;
	string Firstname     = 2;
	string Lastname      = 3;
	string Email         = 4;
	string Password      = 5;
	string PhonePrefix    = 6;
	string Ddd           = 7;
	string Phone         = 8;
}

// ACCOUNT DETAILS
message AccountDetails {
    int64 Id                = 1;
    string Firstname        = 2;
    string Lastname         = 3;
    string Email            = 4;
    string Password         = 5;
    string PhonePrefix        = 6;
    string Ddd              = 7;
    string Phone            = 8;
    bool Deleted            = 9;
    int64 IdNationality     = 10;
    string NationalityName  = 11;
    string NationalityKey   = 12;
}

message AccountDetailsResponse {
    AccountDetails account = 1;
    AppConfigDetails config = 2; 
}

message EditAccountInfos {
	int64 IdNationality  = 1;
	string Firstname     = 2;
	string Lastname      = 3;
	string Email         = 4;
	string Password      = 5;
	string PhonePrefix    = 6;
	string Ddd           = 7;
	string Phone         = 8;
	bool Deleted         = 9;
}

message EditAccountRequest {
    int64 id = 1;
    EditAccountInfos account = 2;
    AppConfig config           = 3;
}